BTWCT-13523 Container Component: Image not scaling correctly on mobile

--- a/waters-aem-frontend/src/styles/container.scss
+++ b/waters-aem-frontend/src/styles/container.scss
@@ -71,6 +71,11 @@
             left: 0;
             position: absolute;
             transform: translateY(0);
+
+            @include mobile {
+                object-fit: cover;
+                height: 100%;
+            }
         }
 
         .cmp-image__title {
